<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:text="@string/registration_form"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:visibility="visible" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:hint="@string/e_mail"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:hint="@string/age"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/et_cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:hint="@string/cpf"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/pink"
        app:cornerRadius="25dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/btn_notas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/pink"
        app:cornerRadius="25dp"
        android:text="Notas" />

</LinearLayout>